--- a/DllDemo1/DllDemo1.vcxproj.filters
+++ b/DllDemo1/DllDemo1.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="DllDemo1.def">
+      <Filter>源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
